WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195277
[iOS] Fullscreen "stay in page" option breaks video playback
https://bugs.webkit.org/show_bug.cgi?id=195277
Summary
[iOS] Fullscreen "stay in page" option breaks video playback
Jer Noble
Reported
2019-03-04 08:00:00 PST
[iOS] Fullscreen "stay in page" option breaks video playback
Attachments
Patch
(3.44 KB, patch)
2019-03-04 08:02 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-03-04 08:00:30 PST
<
rdar://problem/48537317
>
Jer Noble
Comment 2
2019-03-04 08:02:56 PST
Created
attachment 363510
[details]
Patch
WebKit Commit Bot
Comment 3
2019-03-04 08:44:56 PST
Comment on
attachment 363510
[details]
Patch Clearing flags on attachment: 363510 Committed
r242355
: <
https://trac.webkit.org/changeset/242355
>
WebKit Commit Bot
Comment 4
2019-03-04 08:44:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug